Fix events listing, section heading spacing
- Remove wrapper padding and move to to sticky events
- Apply margin-top to all section headings and event listings

--- a/www/templates/default/html/less/events.less
+++ b/www/templates/default/html/less/events.less
@@ -244,6 +244,11 @@
 }
 
 
+.events-sidebar {
+  padding-top: 1em;
+}
+
+
 #dcf-main {
 
   .band-nav {
@@ -331,10 +336,6 @@
   .band-results {
     background-color: #f6f6f5;
 
-    .dcf-wrapper {
-      padding-top: 1em;
-    }
-
     &.view-unl_ucbcn_frontend_search {
 
       a.permalink {
@@ -348,6 +349,7 @@
       background-color: #424240;
       display: flex;
       justify-content: space-between;
+      margin-top: 1em;
       text-transform: uppercase;
 
       h1,
@@ -378,6 +380,7 @@
       .vevent {
         background-color: #fefdfa;
         border: 1px solid #e3e3e2;
+        margin-top: 1em;
         padding: 2.37em 1.78em;
 
         h2 {
@@ -416,10 +419,6 @@
           padding-top: 1em;
         }
 
-      }
-
-      .vevent + .vevent {
-        margin-top: 1em;
       }
 
     }
